[gd_scene load_steps=16 format=3 uid="uid://dx4yi38mkkd5a"]

[ext_resource type="Script" path="res://menu.gd" id="1_cqrg1"]
[ext_resource type="Texture2D" uid="uid://cba7w4k8otcyp" path="res://menu/New Project.png" id="1_utuhv"]
[ext_resource type="Texture2D" uid="uid://dmrhprk6tb3a3" path="res://menu/rond.png" id="3_8087f"]

[sub_resource type="Theme" id="Theme_3mnt8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_edl1x"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1erdu"]
texture = ExtResource("3_8087f")
expand_margin_left = 30.0
expand_margin_top = 40.0
expand_margin_right = 30.0
expand_margin_bottom = 40.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wu57u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3t3uv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8xlv3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lhl7f"]
texture = ExtResource("3_8087f")
expand_margin_left = 150.0
expand_margin_top = 50.0
expand_margin_right = 150.0
expand_margin_bottom = 50.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5nv6u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6jhjw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qqsm4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2u7h2"]
texture = ExtResource("3_8087f")
expand_margin_left = 30.0
expand_margin_top = 40.0
expand_margin_right = 30.0
expand_margin_bottom = 40.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7y1dy"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cqrg1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_utuhv")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(300, 50)
layout_mode = 0
offset_left = 813.0
offset_top = 450.0
offset_right = 1113.0
offset_bottom = 588.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = SubResource("Theme_3mnt8")
theme_override_styles/normal = SubResource("StyleBoxEmpty_edl1x")
theme_override_styles/hover = SubResource("StyleBoxTexture_1erdu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wu57u")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 50)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_3t3uv")

[node name="settinngs" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8xlv3")
theme_override_styles/hover = SubResource("StyleBoxTexture_lhl7f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5nv6u")

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 20)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_6jhjw")

[node name="exit" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_qqsm4")
theme_override_styles/hover = SubResource("StyleBoxTexture_2u7h2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7y1dy")

[connection signal="pressed" from="MarginContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/settinngs" to="." method="_on_settinngs_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
